# citra-bleeding-edge-1

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  appveyor.yml
src/audio_core/hle/: pipe.cpp
src/citra/: CMakeLists.txt  citra.cpp  config.cpp  default_ini.h
src/citra/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  config.cpp  configure.ui  configure_audio.cpp  configure_debug.cpp  configure_dialog.cpp  configure_general.cpp  configure_input.cpp  configure_input.h  keybinding_names.cpp  keybinding_names.h  main.cpp  main.h  ui_configure_audio.h
src/citra_qt/debugger/: disassembler.cpp  graphics_vertex_shader.cpp
src/common/: CMakeLists.txt  bit_set.h  common_funcs.h  common_paths.h  emu_window.cpp  emu_window.h  file_util.cpp  file_util.h  memory_util.cpp  microprofile.h  misc.cpp  string_util.cpp  string_util.h  thread.cpp  timer.cpp  vector_math.h
src/common/logging/: backend.cpp  log.h  text_formatter.cpp
src/common/x64/: abi.cpp  abi.h
src/core/: CMakeLists.txt  core.cpp  memory.cpp  settings.cpp  settings.h  system.cpp
src/core/aes/: aes_secret.cpp
src/core/file_sys/: archive_backend.cpp  archive_backend.h  archive_extsavedata.cpp  archive_romfs.cpp  archive_sdmc.h  archive_sdmcwriteonly.cpp  archive_sdmcwriteonly.h  ivfc_archive.cpp  ivfc_archive.h
src/core/gdbstub/: gdbstub.cpp
src/input_core/: input_core.cpp  input_core.h  key_map.cpp  key_map.h
src/tests/: CMakeLists.txt
src/tests/core/file_sys/: path_parser.cpp
src/video_core/: command_processor.cpp  pica.h
(+51 files in other folders)
